--- a/page2.html
+++ b/page2.html
@@ -2,10 +2,10 @@
 <div class="noise"></div>
 <div class="overlay"></div>
 <div class="terminal">
-    <a href="../Menu/page.html" class="botao">Inicio</a>
-    <a href="../Menu/page3.html" class="botao">Portfolio</a>
-    <a href="../Menu/page4.html" class="botao">Objetivo</a>
-    <a href="../Menu/page5.html" class="botao">Contato</a>
+    <a href="./index.html" class="botao">Inicio</a>
+    <a href="./page3.html" class="botao">Portfolio</a>
+    <a href="./page4.html" class="botao">Objetivo</a>
+    <a href="./page5.html" class="botao">Contato</a>
     <h1>Sobre Mim</h1> 
     <h2>Nasci em 2007, em Pilarzinho, Curitiba, Paraná, Brasil</h2>
     <h2>Eu gosto de varias coisa, como, animais, cozinhar, jogar, modificar jogos, design</h2>
