--- a/page5.html
+++ b/page5.html
@@ -2,10 +2,10 @@
 <div class="noise"></div>
 <div class="overlay"></div>
 <div class="terminal">
-    <a href="../Menu/page.html" class="botao">Inicio</a>
-    <a href="../Menu/page2.html" class="botao">Sobre Mim</a>
-    <a href="../Menu/page3.html" class="botao">Portfolio</a>
-    <a href="../Menu/page4.html" class="botao">Objetivo</a>
+    <a href="./index.html" class="botao">Inicio</a>
+    <a href="./page2.html" class="botao">Sobre Mim</a>
+    <a href="./page3.html" class="botao">Portfolio</a>
+    <a href="./page4.html" class="botao">Objetivo</a>
     <h1>Contato</h1> 
     <h2>nicholas.racioppe@tecpuc.com.br
         nicholas.racioppe00987218@sesisenaipr.org.br
