--- a/page3.html
+++ b/page3.html
@@ -2,10 +2,10 @@
 <div class="noise"></div>
 <div class="overlay"></div>
 <div class="terminal">
-    <a href="../Menu/page.html" class="botao">Inicio</a>
-    <a href="../Menu/page2.html" class="botao">Sobre Mim</a>
-    <a href="../Menu/page4.html" class="botao">Objetivo</a>
-    <a href="../Menu/page5.html" class="botao">Contato</a>
+    <a href="./index.html" class="botao">Inicio</a>
+    <a href="./page2.html" class="botao">Sobre Mim</a>
+    <a href="./page4.html" class="botao">Objetivo</a>
+    <a href="./page5.html" class="botao">Contato</a>
     <h1>Portfolio</h1> 
     <h2>Eu acho design um ramo muito interessante, pois minha criatividade pode fluir, eu possuo dois canais no youtube
         aonde posto videos, sobre jogos que eu gosto, muitos sobre modificações de jogos.
