--- a/page4.html
+++ b/page4.html
@@ -2,10 +2,10 @@
 <div class="noise"></div>
 <div class="overlay"></div>
 <div class="terminal">
-    <a href="../Menu/page.html" class="botao">Inicio</a>
-    <a href="../Menu/page2.html" class="botao">Sobre Mim</a>
-    <a href="../Menu/page3.html" class="botao">Portfolio</a>
-    <a href="../Menu/page5.html" class="botao">Contato</a>
+    <a href="./index.html" class="botao">Inicio</a>
+    <a href="./page2.html" class="botao">Sobre Mim</a>
+    <a href="./page3.html" class="botao">Portfolio</a>
+    <a href="./page5.html" class="botao">Contato</a>
     <h1>Objetivo</h1> 
     <h2>Eu começei o ensino médio pensando que eu seria um desenvolvedor de aplicativos, mas a TECPUC e agora o SESI fez eu querer parar de programar, nesse meio tempo minha mãe abriu um cafe, eu decidi que eu irar trabalhar la, agora eu irei abrir um carrinho de cachorro quente</h2>
 </div>
