--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-
 <link rel="stylesheet" href="style.css">
-<div class="noise"></div>
-<div class="overlay"></div>
-<div class="terminal">
-    <a href="./page2.html" class="botao">Sobre Mim</a>
-    <a href="./page3.html" class="botao">Portfolio</a>
-    <a href="./page4.html" class="botao">Objetivo</a>
-    <a href="./page5.html" class="botao">Contato</a>
-    
-    <h1>Meu nome é Nicholas Basso Racioppe, tenho 17 anos, moro em curitiba, Paraná, Brasil.</h1>
-    
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Timer</title>
+</head>
+<body>
+    <div class="porta">
+        <a href="dentroDoBanheiro.html">cu</a>
+
+    </div>
+</body>
+</html>
