--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<link rel="stylesheet" href="style.css">
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer</title>
+    <title>Imagem Centralizada com Link</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="porta">
-        <a href="dentroDoBanheiro.html">cu</a>
-
+    <div class="container">
+        <a href="dentroDoBanheiro.html" class="image-link">
+            <img src="lisa.png" alt="Imagem Centralizada">
+        </a>
     </div>
 </body>
 </html>
